changes made to Assets and Rental related classes